--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Example of the Authorization Code flow with Spotify</title>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <style type="text/css">
     #login,
     #loggedin {
@@ -22,44 +22,30 @@
 <body>
   <div class="container">
     <div id="login">
-      <h1>This is an example of the Authorization Code flow</h1>
+      <h1>tiny</h1>
+      <h3>Spotify <-> Deezer</h3>
       <a href="/login" class="btn btn-primary">Log in with Spotify</a>
     </div>
     <div id="loggedin">
-      <div id="user-profile">
+      <div id="playlists">
       </div>
-      <div id="oauth">
-      </div>
-      <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
     </div>
   </div>
 
-  <script id="user-profile-template" type="text/x-handlebars-template">
-      <h1>Logged in as {{display_name}}</h1>
-      <div class="media">
-        <div class="pull-left">
-          <img class="media-object" width="150" src="{{images.0.url}}" />
-        </div>
-        <div class="media-body">
-          <dl class="dl-horizontal">
-            <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd>
-            <dt>Id</dt><dd>{{id}}</dd>
-            <dt>Email</dt><dd>{{email}}</dd>
-            <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
-            <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
-            <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
-            <dt>Country</dt><dd>{{country}}</dd>
-          </dl>
-        </div>
+  <script id="playlist-template" type="text/x-handlebars-template">
+    <div class="alert alert-primary" role="alert">
+      Log in success!
+    </div>
+    <div class="media">
+      <div class="media-body">
+        <h4>Tracks in Playlist: <b>3keyQsnosoctNDRlREKWKb</b></h4>
+        <ul class="list-group">
+          {{#each items}}
+            <li class="list-group-item">{{this.track.name}}</li>
+          {{/each}}
+        </ul>
       </div>
-    </script>
-
-  <script id="oauth-template" type="text/x-handlebars-template">
-    <h2>oAuth info</h2>
-    <dl class="dl-horizontal">
-      <dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>
-      <dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}</dd>
-    </dl>
+    </div>
   </script>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
@@ -81,13 +67,9 @@
         return hashParams;
       }
 
-      var userProfileSource = document.getElementById('user-profile-template').innerHTML,
-        userProfileTemplate = Handlebars.compile(userProfileSource),
-        userProfilePlaceholder = document.getElementById('user-profile');
-
-      var oauthSource = document.getElementById('oauth-template').innerHTML,
-        oauthTemplate = Handlebars.compile(oauthSource),
-        oauthPlaceholder = document.getElementById('oauth');
+      var playlistSource = document.getElementById('playlist-template').innerHTML,
+        playlistTemplate = Handlebars.compile(playlistSource),
+        playlistPlaceholder = document.getElementById('playlists');
 
       var params = getHashParams();
 
@@ -99,19 +81,14 @@
         alert('There was an error during the authentication');
       } else {
         if (access_token) {
-          // render oauth info
-          oauthPlaceholder.innerHTML = oauthTemplate({
-            access_token: access_token,
-            refresh_token: refresh_token
-          });
-
+          var playlist_id = "3keyQsnosoctNDRlREKWKb";
           $.ajax({
-            url: 'https://api.spotify.com/v1/me',
+            url: `https://api.spotify.com/v1/playlists/${playlist_id}/tracks`,
             headers: {
               'Authorization': 'Bearer ' + access_token
             },
             success: function (response) {
-              userProfilePlaceholder.innerHTML = userProfileTemplate(response);
+              playlistPlaceholder.innerHTML = playlistTemplate(response);
 
               $('#login').hide();
               $('#loggedin').show();
@@ -122,24 +99,8 @@
           $('#login').show();
           $('#loggedin').hide();
         }
-
-        document.getElementById('obtain-new-token').addEventListener('click', function () {
-          $.ajax({
-            url: '/refresh_token',
-            data: {
-              'refresh_token': refresh_token
-            }
-          }).done(function (data) {
-            access_token = data.access_token;
-            oauthPlaceholder.innerHTML = oauthTemplate({
-              access_token: access_token,
-              refresh_token: refresh_token
-            });
-          });
-        }, false);
       }
     })();
   </script>
 </body>
-
 </html>
