--- a/public/index.html
+++ b/public/index.html
@@ -1,106 +1,103 @@
 <!doctype html>
 <html>
-
-<head>
-  <title>Example of the Authorization Code flow with Spotify</title>
-  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <style type="text/css">
-    #login,
-    #loggedin {
-      display: none;
-    }
-
-    .text-overflow {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      width: 500px;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="container">
-    <div id="login">
-      <h1>tiny</h1>
-      <h3>Spotify <-> Deezer</h3>
-      <a href="/login" class="btn btn-primary">Log in with Spotify</a>
-    </div>
-    <div id="loggedin">
-      <div id="playlists">
-      </div>
-    </div>
-  </div>
-
-  <script id="playlist-template" type="text/x-handlebars-template">
-    <div class="alert alert-primary" role="alert">
-      Log in success!
-    </div>
-    <div class="media">
-      <div class="media-body">
-        <h4>Tracks in Playlist: <b>3keyQsnosoctNDRlREKWKb</b></h4>
-        <ul class="list-group">
-          {{#each items}}
-            <li class="list-group-item">{{this.track.name}}</li>
-          {{/each}}
-        </ul>
-      </div>
-    </div>
-  </script>
-
-  <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-  <script>
-    (function () {
-
-      /**
-       * Obtains parameters from the hash of the URL
-       * @return Object
-       */
-      function getHashParams() {
-        var hashParams = {};
-        var e, r = /([^&;=]+)=?([^&;]*)/g,
-          q = window.location.hash.substring(1);
-        while (e = r.exec(q)) {
-          hashParams[e[1]] = decodeURIComponent(e[2]);
-        }
-        return hashParams;
+  <head>
+    <title>Example of the Authorization Code flow with Spotify</title>
+    <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style type="text/css">
+      #login,
+      #loggedin {
+        display: none;
       }
 
-      var playlistSource = document.getElementById('playlist-template').innerHTML,
-        playlistTemplate = Handlebars.compile(playlistSource),
-        playlistPlaceholder = document.getElementById('playlists');
+      .text-overflow {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 500px;
+      }
+    </style>
+  </head>
 
-      var params = getHashParams();
+  <body>
+    <div class="container">
+      <div id="login">
+        <h1>tiny</h1>
+        <h3>Spotify <-> Deezer</h3>
+        <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+      </div>
+      <div id="loggedin">
+        <div id="playlists">
+        </div>
+      </div>
+    </div>
 
-      var access_token = params.access_token,
-        refresh_token = params.refresh_token,
-        error = params.error;
+    <script id="playlist-template" type="text/x-handlebars-template">
+      <div class="alert alert-primary" role="alert">
+        Log in success!
+      </div>
+      <div class="media">
+        <div class="media-body">
+          <h4>Tracks in Playlist: <b>3keyQsnosoctNDRlREKWKb</b></h4>
+          <ul class="list-group">
+            {{#each items}}
+              <li class="list-group-item">{{this.track.name}}</li>
+            {{/each}}
+          </ul>
+        </div>
+      </div>
+    </script>
 
-      if (error) {
-        alert('There was an error during the authentication');
-      } else {
-        if (access_token) {
-          var playlist_id = "3keyQsnosoctNDRlREKWKb";
-          $.ajax({
-            url: `https://api.spotify.com/v1/playlists/${playlist_id}/tracks`,
-            headers: {
-              'Authorization': 'Bearer ' + access_token
-            },
-            success: function (response) {
-              playlistPlaceholder.innerHTML = playlistTemplate(response);
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script>
+      (function () {
 
-              $('#login').hide();
-              $('#loggedin').show();
-            }
-          });
+        /**
+         * Obtains parameters from the hash of the URL
+         * @return Object
+         */
+        function getHashParams() {
+          var hashParams = {};
+          var e, r = /([^&;=]+)=?([^&;]*)/g,
+            q = window.location.hash.substring(1);
+          while (e = r.exec(q)) {
+            hashParams[e[1]] = decodeURIComponent(e[2]);
+          }
+          return hashParams;
+        }
+
+        var playlistSource = document.getElementById('playlist-template').innerHTML,
+          playlistTemplate = Handlebars.compile(playlistSource),
+          playlistPlaceholder = document.getElementById('playlists');
+
+        var params = getHashParams();
+
+        var access_token = params.access_token,
+          refresh_token = params.refresh_token,
+          error = params.error;
+
+        if (error) {
+          alert('There was an error during the authentication');
         } else {
-          // render initial screen
-          $('#login').show();
-          $('#loggedin').hide();
+          if (access_token) {
+            var playlist_id = "3keyQsnosoctNDRlREKWKb";
+            $.ajax({
+              url: `https://api.spotify.com/v1/playlists/${playlist_id}/tracks`,
+              headers: { 'Authorization': 'Bearer ' + access_token },
+              success: function (response) {
+                playlistPlaceholder.innerHTML = playlistTemplate(response);
+                $('#login').hide();
+                $('#loggedin').show();
+              }
+            });
+          } else {
+            // render initial screen
+            $('#login').show();
+            $('#loggedin').hide();
+          }
         }
-      }
-    })();
-  </script>
-</body>
+      })();
+    </script>
+  </body>
 </html>
