--- a/public/index.html
+++ b/public/index.html
@@ -1,182 +1,60 @@
 <!doctype html>
 <html>
 
-<head>
-  <title>Example of the Authorization Code flow with Spotify</title>
-  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <style type="text/css">
-    body {
-      margin-top: 1rem;
-    }
+  <head>
+    <title>Example of the Authorization Code flow with Spotify</title>
+    <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 
-    #login,
-    #loggedin {
-      display: none;
-    }
-
-    .section {
-      margin-top: 50px;
-    }
-
-    .text-overflow {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      width: 500px;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="container">
-    <div class="jumbotron">
-      <h1 class="display-4">tiny</h1>
-      <p class="lead">Spotify <-> Deezer Playlist Converter</p>
-      <hr class="my-4">
-      <div id="login">
-        <a class="btn btn-primary btn-lg" href="/login">Log in with Spotify</a>
-      </div>
-    </div>
-    <div id="loggedin">
-      <form id="playlist-form">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Spotify playlist</label>
-          <input type="text" class="form-control" aria-describedby="textHelp">
-          <small id="textHelp" class="form-text text-muted">Playlist url</small>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="display-4">tiny</h1>
+        <p class="lead">Spotify
+          <-> Deezer Playlist Converter</p>
+        <hr class="my-4">
+        <div id="login">
+          <a class="btn btn-primary btn-lg" href="/login">Log in with Spotify</a>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-      <div id="playlists">
+      </div>
+      <div id="loggedin">
+        <form id="playlist-form">
+          <div class="form-group">
+            <label for="exampleInputEmail1">Spotify playlist</label>
+            <input type="text" class="form-control" aria-describedby="textHelp">
+            <small id="textHelp" class="form-text text-muted">Playlist url</small>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <div id="playlists">
+        </div>
       </div>
     </div>
-  </div>
 
-  <script id="playlist-template" type="text/x-handlebars-template">
-    <div class="section media">
-      <div class="media-body">
-        <h4>Tracks in Playlist</h4>
-        <ul id="track-list" class="list-group">
-          {{#each items}}
+    <script id="playlist-template" type="text/x-handlebars-template">
+      <div class="section media">
+        <div class="media-body">
+          <h4>Tracks in Playlist</h4>
+          <ul id="track-list" class="list-group">
+            {{#each items}}
             <li class="list-group-item">
-              <span>{{this.track.name}} - </span>
-              {{#each this.track.artists}}
-                <span>{{name}}</span>
-              {{/each}}
-              <button
-                type="button"
-                class="btn btn-secondary"
-                id="{{@index}}"
-              >
+              <span>{{this.track.name}} - </span> {{#each this.track.artists}}
+              <span>{{name}}</span> {{/each}}
+              <button type="button" class="btn btn-secondary" id="{{@index}}">
                 Get Deezer Version
               </button>
             </li>
-          {{/each}}
-        </ul>
+            {{/each}}
+          </ul>
+        </div>
       </div>
-    </div>
-  </script>
+    </script>
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
-  <script>
-    (function () {
-      /**
-       * Obtains parameters from the hash of the URL
-       * @return Object
-       */
-      function getHashParams() {
-        var hashParams = {};
-        var e, r = /([^&;=]+)=?([^&;]*)/g,
-          q = window.location.hash.substring(1);
-        while (e = r.exec(q)) {
-          hashParams[e[1]] = decodeURIComponent(e[2]);
-        }
-        return hashParams;
-      }
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+    <script src="script.js"></script>
 
-      function handleButtonClick(e) {
-        if (e.target.nodeName === "BUTTON") {
-          e.stopPropagation();
-          var track = window.playlist.items[e.target.id].track;
-          console.log("track", track);
-          console.log("handle click", e);
-          $.ajax({
-            url: "https://api.deezer.com/search",
-            data: {
-              q: `artist:\"${track.artists[0].name}\" track:\"${track.name}\"`
-            },
-            success: function (response) {
-              console.log(response);
-            }
-          });
-        }
-      }
-
-      function getSpotifyPlaylist(e) {
-        if (e.target.nodeName === "BUTTON") {
-          e.stopPropagation();
-
-          var playlistUrl = $("input[type=text]").val();
-
-          if (!playlistUrl) {
-            return;
-          }
-
-          var url = new URL(playlistUrl);
-          var playlistId = url.pathname.split("playlist/")[1]
-
-          if (!playlistId) {
-            return;
-          }
-
-          $.ajax({
-            url: `https://api.spotify.com/v1/playlists/${playlistId}/tracks`,
-            headers: { 'Authorization': 'Bearer ' + access_token },
-            success: function (response) {
-              window.playlist = response;
-              playlistPlaceholder.innerHTML = playlistTemplate(response);
-              $('#login').hide();
-              $('#loggedin').show();
-
-              var trackList = document.getElementById("track-list");
-              trackList.addEventListener("click", handleButtonClick);
-            }
-          });
-        }
-      }
-
-      var playlistSource = document.getElementById('playlist-template').innerHTML,
-        playlistTemplate = Handlebars.compile(playlistSource),
-        playlistPlaceholder = document.getElementById('playlists');
-
-      var params = getHashParams();
-
-      var access_token = params.access_token,
-        refresh_token = params.refresh_token,
-        error = params.error;
-
-      if (error) {
-        alert('There was an error during the authentication');
-      } else {
-        if (access_token) {
-          $('#login').hide();
-          $('#loggedin').show();
-        } else {
-          // render initial screen
-          $('#login').show();
-          $('#loggedin').hide();
-        }
-      }
-
-      window.addEventListener('DOMContentLoaded', (event) => {
-        console.log('DOM fully loaded and parsed');
-
-        var playlistForm = document.getElementById("playlist-form");
-        playlistForm.addEventListener("click", getSpotifyPlaylist);
-      });
-    })();
-  </script>
-</body>
+  </body>
 
 </html>
