--- a/public/index.html
+++ b/public/index.html
@@ -1,50 +1,69 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
   <head>
     <title>Example of the Authorization Code flow with Spotify</title>
-    <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link
+      rel="stylesheet"
+      href="//stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
     <div class="container">
       <div class="jumbotron">
         <h1 class="display-4">tiny</h1>
-        <p class="lead">Spotify
-          <-> Deezer Playlist Converter</p>
-        <hr class="my-4">
+        <p class="lead">Spotify <-> Deezer Playlist Converter</p>
+        <hr class="my-4" />
         <div id="login">
-          <a class="btn btn-primary btn-lg" href="/login">Log in with Spotify</a>
+          <a class="btn btn-primary btn-lg" href="/login"
+            >Log in with Spotify</a
+          >
         </div>
       </div>
       <div id="loggedin">
         <form id="playlist-form">
           <div class="form-group">
             <label for="exampleInputEmail1">Spotify playlist</label>
-            <input type="text" class="form-control" aria-describedby="textHelp">
-            <small id="textHelp" class="form-text text-muted">Playlist url</small>
+            <input
+              type="text"
+              class="form-control"
+              aria-describedby="textHelp"
+            />
+            <small id="textHelp" class="form-text text-muted"
+              >Playlist url</small
+            >
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-        <div id="playlists">
-        </div>
+        <div id="playlists"></div>
       </div>
     </div>
 
     <script id="playlist-template" type="text/x-handlebars-template">
       <div class="section media">
         <div class="media-body">
-          <h4>Tracks in Playlist</h4>
+          <h4>
+            Tracks in Playlist
+          </h4>
           <ul id="track-list" class="list-group">
             {{#each items}}
-            <li class="list-group-item">
-              <span>{{this.track.name}} - </span> {{#each this.track.artists}}
-              <span>{{name}}</span> {{/each}}
-              <button type="button" class="btn btn-secondary" id="{{@index}}">
-                Get Deezer Version
-              </button>
-            </li>
+              <li class="list-group-item">
+                <span>
+                  {{this.track.name}} -
+                </span>
+
+                {{#each this.track.artists}}
+                  <span>
+                    {{name}}
+                  </span>
+                {{/each}}
+                <button type="button" class="btn btn-secondary" id="{{@index}}">
+                  Get Deezer Version
+                </button>
+              </li>
             {{/each}}
           </ul>
         </div>
@@ -54,7 +73,5 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <script src="script.js"></script>
-
   </body>
-
 </html>
