created the new file for route

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,9 @@
         <hr class="my-4" />
       </div>
       <div id="login">
-        <a class="btn btn-primary btn-lg" href="/login">Log in with Spotify</a>
+        <a class="btn btn-primary btn-lg" href="/auth/login"
+          >Log in with Spotify</a
+        >
       </div>
       <div id="loggedin">
         <form id="playlist-form">
