--- a/public/error.html
+++ b/public/error.html
@@ -21,7 +21,7 @@
               error 500
             </h2>
             <div class="error-details">
-              Sorry, an error has occured, Requested page not found!
+              <h1>Sorry, an error has occured.</h1>
             </div>
             <div class="error-actions">
               <a href="#" class="btn btn-primary btn-lg"
